--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,11 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;">
+    <span style="color: black; font-size: large;">読み込み中...</span>
+  </div>
+
 <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
