--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;">
+    <span style="color: black; font-size: large;">読み込み中...</span>
+  </div>
+
 <script>
-    var serviceWorkerVersion = '976537257';
+    var serviceWorkerVersion = '943062275';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
