--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description" content="FleetFlutter">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="FleetFlutter">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-    <title>fleet_flutter</title>
+    <title>FleetFlutter</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -20,7 +20,7 @@
   </div>
 
 <script>
-    var serviceWorkerVersion = '531948341';
+    var serviceWorkerVersion = '587053393';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
